--- a/src/view/window_greeting.fxml
+++ b/src/view/window_greeting.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Font?>
 
 
-<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.ApplicationController">
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="680.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="reto0_g3.ApplicationController">
    <children>
       <Label fx:id="lbl_Greeting" layoutX="223.0" layoutY="208.0" prefHeight="65.0" prefWidth="234.0" textAlignment="CENTER">
          <font>
